# Producer-Consumer

./: .gitattributes  .gitignore  CMakeLists.txt  README  README.md  makefile
src/: consumer.c  logreader_threads.c  main.c  producer-consumer.c  producer.c  producer_consumer.c  queue.c
src/include/: arg_structs.h  argstruct.h  argstructs.h  consumer.h  macrodefs.h  producer.h  queue.h  threaded_functions.h
